Redirect browser sync to the node server.

--- a/src/views/display.html
+++ b/src/views/display.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>constellations</title>
+  <title>pyxis</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <div id="constellations" class="game"></div>
+  <div id="pyxis" class="game"></div>
   <script src="game.js"></script>
 </body>
 </html>
